--- a/front/public/index.html
+++ b/front/public/index.html
@@ -8,7 +8,7 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
   <!-- Import style -->
   <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css"/>
-  <link rel="stylesheet" href="/extra.css">
+  <link rel="stylesheet" href="/usr-defined.css">
   <!-- Import Vue 3 -->
   <script src="//unpkg.com/vue@3"></script>
   <!-- Import component library -->
