--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-CN">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
   <!-- Import style -->
   <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css"/>
-  <link rel="stylesheet" href="/usr-defined.css">
+  <link rel="stylesheet" href="./usr-defined.css">
   <!-- Import Vue 3 -->
   <script src="//unpkg.com/vue@3"></script>
   <!-- Import component library -->
