--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,12 +7,12 @@
   <link rel="icon" href="/favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <!-- Import style -->
-  <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css"/>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/dist/index.css"/>
   <link rel="stylesheet" href="./usr-defined.css">
   <!-- Import Vue 3 -->
-  <script src="//unpkg.com/vue@3"></script>
+  <script src="//cdn.jsdelivr.net/npm/vue@3"></script>
   <!-- Import component library -->
-  <script src="//unpkg.com/element-plus"></script>
+  <script src="//cdn.jsdelivr.net/npm/element-plus"></script>
 </head>
 <body>
 <noscript>
